# uv-nix

./: .gitignore  .gitmodules  Cargo.toml  README.md  default.nix  devenv.nix  devenv.yaml  flake.nix  garnix.yaml  justfile
.claude/: settings.local.json
.githooks/: pre-commit
.github/actions/setup/: action.yml
.github/workflows/: build-artifacts.yml  check-uv-release.yml  checks.yml  compatibility-tests.yml  release.yml  test-macos.yml  update-binary-registry.yml  update-flake-lock.yml
data/: bin.json  ctypes_hook.py  default-libs.json  package-build-libs.json  soname-map.json  uv.json
nix/: bin.nix  build-patched-python.nix  lib.nix  patch-python.nix  sources.nix  uv-nix-binaries.nix  uv-nix-sources.nix
patches/: 01-uv-cli-nix-commands.patch  01-workspace-add-uv-nix.patch  02-uv-cli-nix-commands.patch  02-uv-crate-nix-dispatch.patch  03-uv-crate-nix-dispatch.patch  03-uv-python-nix-hook.patch  04-uv-dispatch-nix-build-env.patch  04-uv-python-nix-hook.patch  05-uv-dispatch-nix-build-env.patch
releases/: 0.11.17.nix  0.11.18.nix  0.11.19.nix  0.11.20.nix  0.11.21.nix  0.11.22.nix  0.11.23.nix  0.11.24.nix  0.11.25.nix  0.11.26.nix  0.11.27.nix  0.11.28.nix  0.11.29.nix  0.11.30.nix  0.11.31.nix  0.11.32.nix
scripts/: apply-patches.sh  clone-uv.sh  update-lockfile.sh
src/: build_env.rs  cache.rs  cli.rs  config.rs  ctypes_hook.rs  lib.rs  nix_build.rs  nix_config.rs  nixgen.rs  nixpkgs.rs  patchelf.rs  rust_overlay.rs  soname.rs
tests/: Dockerfile  bench_install.rs  bench_python_patch.rs  conftest.py  docker-test-lib.sh  pyproject.toml  python_patch.rs  source_build.rs  test_patch_python.py  test_sync.py  wheel_install.rs
tests/common/: docker.rs  mod.rs  packages.rs  runner.rs
tests/data/: packages.json
tests/docker/: pyproject.toml  test_patch_python.py  test_sync.py
tests/nix-gen/: test-nix-gen-heavy.sh  test-nix-gen.sh
