[package]
name = "uv-nix"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = { version = "1" }
rayon = { version = "1" }
owo-colors = { version = "4" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sha2 = { version = "0.10" }
toml = { version = ">=0.8" }
toml_edit = { version = ">=0.22" }
tracing = { version = "0.1" }
walkdir = { version = "2" }

[dev-dependencies]
tempfile = { version = "3" }
serde_json = { version = "1" }

[features]
default = []

[[test]]
name = "wheel_install"
path = "tests/wheel_install.rs"

[[test]]
name = "source_build"
path = "tests/source_build.rs"

[[test]]
name = "python_patch"
path = "tests/python_patch.rs"
