[project]
name = "uv-nix-tests"
version = "0.0.1"
description = "Integration tests for uv-nix"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8",
    "pytest-xdist>=3",
    "docker>=7",
]

[tool.setuptools]
py-modules = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["."]
markers = [
    "docker: tests that require Docker",
    "slow: large packages that take a long time to install",
    "source_build: tests that build packages from source (--no-binary)",
]

[tool.uv-nix]
nixpkgs = "github:NixOS/nixpkgs/917fec990948658ef1ccd07cef2a1ef060786846"
